crates/ferrum-interfaces/tests/ui/vnext/fail/active_sequence_abort_receipt_is_not_deserialize.rs
use ferrum_interfaces::vnext::ActiveSequenceAbortReceipt;

fn decode(bytes: &[u8]) {
    let _: ActiveSequenceAbortReceipt = serde_json::from_slice(bytes).unwrap();
}

fn main() {}
